Enable ill check

--- a/checks.cfg
+++ b/checks.cfg
@@ -9,6 +9,7 @@ pc_bwd    10    30
 liveness  1  10 30
 unique    1  10 30
 causal    10    30
+ill             20
 
 [defines]
 `define RISCV_FORMAL
