--- a/checks.cfg
+++ b/checks.cfg
@@ -10,6 +10,7 @@ liveness  1  10 30
 unique    1  10 30
 causal    10    30
 ill             20
+hang      10    30
 
 [defines]
 `define RISCV_FORMAL
