--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ setup_requires =
     setuptools_scm
 install_requires =
     nmigen
-    nmigen-boards
+    nmigen-boards @ git+https://github.com/m-labs/nmigen-boards@master
 
 [options.entry_points]
 console_scripts =
