--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ packages = find:
 setup_requires =
     setuptools_scm
 install_requires =
-    nmigen
+    nmigen @ git+https://github.com/m-labs/nmigen@master
     nmigen-boards @ git+https://github.com/m-labs/nmigen-boards@master
 
 [options.entry_points]
