Add initial SoC example for iCEBreaker and iCE40-HX8K breakout board

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,5 @@ install_requires =
 [options.entry_points]
 console_scripts =
     icicle = icicle.cli:main
+    icicle-ice40-hx8k-b-evn = icicle.boards.ice40_hx8k_b_evn:main
+    icicle-icebreaker = icicle.boards.icebreaker:main
