Add ECP5 evaluation board support

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,5 +13,6 @@ install_requires =
 [options.entry_points]
 console_scripts =
     icicle = icicle.cli:main
+    icicle-ecp5-5g-evn = icicle.boards.ecp5_5g_evn:main
     icicle-ice40-hx8k-b-evn = icicle.boards.ice40_hx8k_b_evn:main
     icicle-icebreaker = icicle.boards.icebreaker:main
