Update nmigen repository path

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ packages = find:
 setup_requires =
     setuptools_scm
 install_requires =
-    nmigen @ git+https://github.com/m-labs/nmigen@master
-    nmigen-boards @ git+https://github.com/m-labs/nmigen-boards@master
+    nmigen @ git+https://github.com/nmigen/nmigen@master
+    nmigen-boards @ git+https://github.com/nmigen/nmigen-boards@master
 
 [options.entry_points]
 console_scripts =
