Use standard wishbone.Interface class from nmigen-soc

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ setup_requires =
 install_requires =
     nmigen @ git+https://github.com/nmigen/nmigen@master
     nmigen-boards @ git+https://github.com/nmigen/nmigen-boards@master
+    nmigen-soc @ git+https://github.com/nmigen/nmigen-soc@master
 
 [options.entry_points]
 console_scripts =
