Update nMigen references to Amaranth
This commit also updates URLs to Yosys and riscv-formal in the README,
and removes the reference to SymbiFlow. (SymbiFlow has been renamed to
F4PGA, but the project doesn't really seem to be associated with the
YosysHQ/Amaranth projects, which are responsible for the toolchain we
use.)

--- a/checks.cfg
+++ b/checks.cfg
@@ -18,5 +18,5 @@ hang     10    30
 `define RISCV_FORMAL_ALIGNED_MEM
 
 [script-sources]
-connect_rpc -exec env PYTHONPATH=@basedir@/cores/@core@ nmigen-rpc yosys icicle.cpu.CPU
+connect_rpc -exec env PYTHONPATH=@basedir@/cores/@core@ amaranth-rpc yosys icicle.cpu.CPU
 read_verilog -noautowire -sv @basedir@/cores/@core@/rvfi_wrapper.sv
