--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,9 @@ packages = find:
 setup_requires =
     setuptools_scm
 install_requires =
-    nmigen @ git+https://github.com/nmigen/nmigen@master
-    nmigen-boards @ git+https://github.com/nmigen/nmigen-boards@master
-    nmigen-soc @ git+https://github.com/nmigen/nmigen-soc@master
+    amaranth @ git+https://github.com/amaranth-lang/amaranth@main
+    amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main
+    amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main
 
 [options.entry_points]
 console_scripts =
