Replace {i,d}memcheck with modern equivalents

--- a/checks.cfg
+++ b/checks.cfg
@@ -1,6 +1,7 @@
 [options]
 isa rv32i
 nret 1
+nbus 2
 blackbox
 
 [depth]
@@ -13,6 +14,11 @@ unique    1 10 30
 causal   10    30
 ill            20
 hang     10    30
+
+bus_imem       1 10
+bus_imem_fault 1 10
+bus_dmem       1 10
+bus_dmem_fault 1 10
 
 [defines]
 `define RISCV_FORMAL_ALIGNED_MEM
