Add RISCV_FORMAL_MEM_FAULT support

--- a/checks.cfg
+++ b/checks.cfg
@@ -22,6 +22,7 @@ bus_dmem_fault 1 10
 
 [defines]
 `define RISCV_FORMAL_ALIGNED_MEM
+`define RISCV_FORMAL_MEM_FAULT
 
 [script-sources]
 connect_rpc -exec env PYTHONPATH=@basedir@/cores/@core@ amaranth-rpc yosys icicle.cpu.CPU
