--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ install_requires =
     amaranth @ git+https://github.com/amaranth-lang/amaranth@main
     amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main
     amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main
+    amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@main
 
 [options.entry_points]
 console_scripts =
